// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildActiveMappings combines all mappings and includes core mappings 1`] = `
Object {
  "_meta": Object {
    "migrationMappingPropertyHashes": Object {
      "aaa": "625b32086eb1d1203564cf85062dd22e",
      "bbb": "18c78c995965207ed3f6e7fc5c6e55fe",
      "migrationVersion": "4a1746014a75ade3a714e1db5763276f",
      "namespace": "2f4316de49999235636386fe51dc06c1",
      "namespaces": "2f4316de49999235636386fe51dc06c1",
      "originId": "2f4316de49999235636386fe51dc06c1",
      "references": "7997cf5a56cc02bdc9c93361bde732b0",
      "type": "2f4316de49999235636386fe51dc06c1",
      "updated_at": "00da57df13e94e9d98437d13ace4bfe0",
    },
  },
  "dynamic": "strict",
  "properties": Object {
    "aaa": Object {
      "type": "text",
    },
    "bbb": Object {
      "type": "long",
    },
    "migrationVersion": Object {
      "dynamic": "true",
      "type": "object",
    },
    "namespace": Object {
      "type": "keyword",
    },
    "namespaces": Object {
      "type": "keyword",
    },
    "originId": Object {
      "type": "keyword",
    },
    "references": Object {
      "properties": Object {
        "id": Object {
          "type": "keyword",
        },
        "name": Object {
          "type": "keyword",
        },
        "type": Object {
          "type": "keyword",
        },
      },
      "type": "nested",
    },
    "type": Object {
      "type": "keyword",
    },
    "updated_at": Object {
      "type": "date",
    },
  },
}
`;

exports[`buildActiveMappings handles the \`dynamic\` property of types 1`] = `
Object {
  "_meta": Object {
    "migrationMappingPropertyHashes": Object {
      "firstType": "635418ab953d81d93f1190b70a8d3f57",
      "migrationVersion": "4a1746014a75ade3a714e1db5763276f",
      "namespace": "2f4316de49999235636386fe51dc06c1",
      "namespaces": "2f4316de49999235636386fe51dc06c1",
      "originId": "2f4316de49999235636386fe51dc06c1",
      "references": "7997cf5a56cc02bdc9c93361bde732b0",
      "secondType": "72d57924f415fbadb3ee293b67d233ab",
      "thirdType": "510f1f0adb69830cf8a1c5ce2923ed82",
      "type": "2f4316de49999235636386fe51dc06c1",
      "updated_at": "00da57df13e94e9d98437d13ace4bfe0",
    },
  },
  "dynamic": "strict",
  "properties": Object {
    "firstType": Object {
      "dynamic": "strict",
      "properties": Object {
        "field": Object {
          "type": "keyword",
        },
      },
    },
    "migrationVersion": Object {
      "dynamic": "true",
      "type": "object",
    },
    "namespace": Object {
      "type": "keyword",
    },
    "namespaces": Object {
      "type": "keyword",
    },
    "originId": Object {
      "type": "keyword",
    },
    "references": Object {
      "properties": Object {
        "id": Object {
          "type": "keyword",
        },
        "name": Object {
          "type": "keyword",
        },
        "type": Object {
          "type": "keyword",
        },
      },
      "type": "nested",
    },
    "secondType": Object {
      "dynamic": false,
      "properties": Object {
        "field": Object {
          "type": "long",
        },
      },
    },
    "thirdType": Object {
      "properties": Object {
        "field": Object {
          "type": "text",
        },
      },
    },
    "type": Object {
      "type": "keyword",
    },
    "updated_at": Object {
      "type": "date",
    },
  },
}
`;
